--- a/experiments/mpii/semhrnet/w32_256x256_adam_lr1e-3.yaml
+++ b/experiments/mpii/semhrnet/w32_256x256_adam_lr1e-3.yaml
@@ -47,7 +47,7 @@ MODEL:
     STAGE2:
       NUM_MODULES: 1
       NUM_BRANCHES: 2
-      BLOCK: SEMANTIC_BASIC
+      BLOCK: G_BASIC
       NUM_BLOCKS:
       - 4
       - 4
@@ -58,7 +58,7 @@ MODEL:
     STAGE3:
       NUM_MODULES: 4
       NUM_BRANCHES: 3
-      BLOCK: SEMANTIC_BASIC
+      BLOCK: G_BASIC
       NUM_BLOCKS:
       - 4
       - 4
@@ -71,7 +71,7 @@ MODEL:
     STAGE4:
       NUM_MODULES: 3
       NUM_BRANCHES: 4
-      BLOCK: SEMANTIC_BASIC
+      BLOCK: G_BASIC
       NUM_BLOCKS:
       - 4
       - 4
@@ -94,8 +94,8 @@ TRAIN:
   LR: 0.001
   LR_FACTOR: 0.1
   LR_STEP:
-  - 240
-  - 280
+  - 200
+  - 250
   WD: 0.0001
   GAMMA1: 0.99
   GAMMA2: 0.0
