--- a/experiments/mpii/semhrnet/v100_base_semhrnet.yaml
+++ b/experiments/mpii/semhrnet/v100_base_semhrnet.yaml
@@ -109,7 +109,7 @@ TRAIN:
 TEST:
   BATCH_SIZE_PER_GPU: 32
   MODEL_FILE: ''
-  FLIP_TEST: true
+  FLIP_TEST: false
   POST_PROCESS: true
   SHIFT_HEATMAP: true
 DEBUG:
