--- a/experiments/mpii/semhrnet/v100_semconvhrnet_w32.yaml
+++ b/experiments/mpii/semhrnet/v100_semconvhrnet_w32.yaml
@@ -89,7 +89,7 @@ MODEL:
       - 256
       FUSE_METHOD: SUM
 LOSS:
-  USE_TARGET_WEIGHT: false
+  USE_TARGET_WEIGHT: true
 TRAIN:
   BATCH_SIZE_PER_GPU: 32
   SHUFFLE: true
