--- a/experiments/mpii/semhrnet/v100_base_semhrnet_aspp_pal_multi_scale.yaml
+++ b/experiments/mpii/semhrnet/v100_base_semhrnet_aspp_pal_multi_scale.yaml
@@ -112,7 +112,7 @@ TEST:
   FLIP_TEST: true
   POST_PROCESS: true
   SHIFT_HEATMAP: true
-  SCALE_FACTOR: [1]
+  SCALE_LIST: [1]
 DEBUG:
   DEBUG: true
   SAVE_BATCH_IMAGES_GT: true
