--- a/experiments/mpii/semhrnet/v100_base_semhrnet_aspp_pal.yaml
+++ b/experiments/mpii/semhrnet/v100_base_semhrnet_aspp_pal.yaml
@@ -21,7 +21,7 @@ DATASET:
   ROT_FACTOR: 30
   SCALE_FACTOR: 0.25
   TEST_SET: valid
-  TRAIN_SET: train
+  TRAIN_SET: trainval
 MODEL:
   INIT_WEIGHTS: true
   NAME: base_semhrnet_aspp_1357_pal
@@ -94,7 +94,7 @@ TRAIN:
   BATCH_SIZE_PER_GPU: 32
   SHUFFLE: true
   BEGIN_EPOCH: 0
-  END_EPOCH: 210
+  END_EPOCH: 220
   OPTIMIZER: adam
   LR: 0.001
   LR_FACTOR: 0.1
