--- a/experiments/mpii/semhrnet/v100_base_semhrnet_aspp_pal_multi_scale.yaml
+++ b/experiments/mpii/semhrnet/v100_base_semhrnet_aspp_pal_multi_scale.yaml
@@ -110,6 +110,7 @@ TEST:
   BATCH_SIZE_PER_GPU: 0.5
   MODEL_FILE: ''
   FLIP_TEST: true
+  TEST.PROJECT2IMAGE: true
   POST_PROCESS: true
   SHIFT_HEATMAP: true
   SCALE_LIST: [1]
