--- a/experiments/mpii/semhrnet/t4_base_semhrnet.yaml
+++ b/experiments/mpii/semhrnet/t4_base_semhrnet.yaml
@@ -112,6 +112,7 @@ TEST:
   FLIP_TEST: true
   POST_PROCESS: true
   SHIFT_HEATMAP: true
+  MULTI_SCALE: false
 DEBUG:
   DEBUG: true
   SAVE_BATCH_IMAGES_GT: true
