Update and rename v100_48_256.yaml to v100_48_384_base_semhrnet.yaml

--- a/experiments/coco/semhrnet/v100_48_384_base_semhrnet.yaml
+++ b/experiments/coco/semhrnet/v100_48_384_base_semhrnet.yaml
@@ -24,7 +24,7 @@ DATASET:
   TRAIN_SET: 'train2017'
 MODEL:
   INIT_WEIGHTS: true
-  NAME: pose_hrnet
+  NAME: base_semhrnet_aspp_1357_pal
   NUM_JOINTS: 17
   PRETRAINED: 'models/pytorch/imagenet/hrnet_w48-8ef0771d.pth'
   TARGET_TYPE: gaussian
